Dev (#37)
* arreglo cobertura y crear designacion

* arreglo designacion y cobertura 2